  - se e' stata preventivamente aperta una transazione sull'intera lista anche il nuovo db caricato avviera' la transazione

[14/04/2021] - 5.0.11 - Simone Pelaia
Nuovo metodo ToBizObjectList sulla datalist

[21/04/2021] - 5.0.12 - Simone Pelaia
Clone Businesslot - Vengono riattribuiti gli eventi dello slot principale
Reinclusa documentazione nei pacchetti

[21/05/2021] - 5.0.13 - Simone Pelaia
Possibile specificare la posizione del campo nel filtro: sx (default), dx rispetto all'operatore

[21/05/2021] - 5.0.14 - Simone Pelaia
Reincluso Xml di documentazione

[15/06/2021] - 5.0.15 - Simone Pelaia
Possibilita' di eseguire query su lista tramite espressione LINQ (SearchByLinq)

[28/06/2021] - 5.0.16 - Simone Pelaia
Serializzazione JSON solo per propriet semplici. No navigazione
Ordinamento SQL Liste tramite espressione LINQ

[30/06/2021] - 5.0.17 - Simone Pelaia
Ripristino DBBeginTransAll senza parametri

[01/07/2021] - 5.0.18 - Simone Pelaia
Metodo IncludeDeleted su lista per rimuovere il filtro automatico sui record cancellati logicamente. Vale solo per l'istruzione query successiva

[06/07/2021] - 5.0.19 - Simone Pelaia
Fix su traduzione Linq dell'estensione "In" in caso di array non esplicitato fornito in input

[06/07/2021] - 5.0.20 - Simone Pelaia
Introdotte estensioni fake IsNull e IsNotNull per forzare la relativa query tramite Linq

[06/07/2021] - 5.0.21 - Simone Pelaia
Fix bug che impedisce di utilizzare una SearchByLinq all'interno di un'altra

[02/08/2021] - 5.0.22 - Simone Pelaia
Reintegrate tutte le librerie nell'unica Business.Data.Objects.Core

[03/08/2021] - 5.0.23 - Simone Pelaia
Esposta la lista dei parametri db

[03/08/2021] - 5.0.24 - Simone Pelaia
Esposta la proprietà che indica se possibile chiudere o meno la connessione db dopo uno statement

[03/08/2021] - 5.0.25 - Simone Pelaia
Aggiunto metodo su oggetto "FromJson" per deserializzazione. Attenzione: presuppone la serializzazione con "ToJson"